Added Tamil support, enhanced quiz features, 2GB upload capability, and fixed login issues

--- a/Frontend-HTML/index.html
+++ b/Frontend-HTML/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>RAG Chatbot - AI Document Assistant</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,6 +28,9 @@
                 <button type="submit" class="login-button">Login</button>
             </form>
             <div id="login-error" class="login-error" style="display: none;"></div>
+            <div style="text-align: center; margin-top: 15px; font-size: 12px; color: #999;">
+                Default: admin / admin123
+            </div>
         </div>
     </div>
 
