MASSIVE QUIZ UPGRADE: Support 50/100/150/200 questions with maximum PDF coverage - Batch generation for large quizzes - Smart chunk sampling across entire document - Progress tracking for large quizzes - Proper A/B/C/D labeling maintained

--- a/Frontend-HTML/index.html
+++ b/Frontend-HTML/index.html
@@ -272,6 +272,11 @@
                                 <option value="5">5 Questions</option>
                                 <option value="10" selected>10 Questions</option>
                                 <option value="15">15 Questions</option>
+                                <option value="20">20 Questions</option>
+                                <option value="50">50 Questions (Maximum Coverage)</option>
+                                <option value="100">100 Questions (Comprehensive)</option>
+                                <option value="150">150 Questions (Extensive)</option>
+                                <option value="200">200 Questions (Complete Coverage)</option>
                             </select>
                         </div>
                         <button onclick="generateQuiz()" class="action-button generate-quiz-btn" id="generate-quiz-btn">🎯 Generate Quiz</button>
